--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,8 @@
-// Ionic Variables and Theming. For more info, please see:
-// http://ionicframework.com/docs/theming/
+/* Ionic Variables and Theming. For more info, please see:
+http://ionicframework.com/docs/theming/ */
 
 /** Ionic CSS Variables **/
+
 :root {
   /** primary **/
   --ion-color-primary: #3880ff;
@@ -74,4 +75,400 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+    /** title **/
+    --ion-color-title: var(--ion-color-primary);
+    --ion-color-title-rgb: 105, 187, 123;
+    --ion-color-title-contrast: #ffffff;
+    --ion-color-title-contrast-rgb: 255, 255, 255;
+    --ion-color-title-shade: #fbfffc;
+    --ion-color-title-tint: #fdfdfd;
+}
+
+
+/*
+ * Dark Colors
+ * -------------------------------------------
+ */
+
+body.dark {
+  --ion-color-primary: #ffffff;
+  --ion-color-primary-rgb: 66,140,255;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #3a7be0;
+  --ion-color-primary-tint: #5598ff;
+
+  --ion-color-secondary: #121212;
+  --ion-color-secondary-rgb: 80,200,255;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #46b0e0;
+  --ion-color-secondary-tint: #62ceff;
+
+  --ion-color-tertiary: #6a64ff;
+  --ion-color-tertiary-rgb: 106,100,255;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255,255,255;
+  --ion-color-tertiary-shade: #5d58e0;
+  --ion-color-tertiary-tint: #7974ff;
+
+  --ion-color-success: #2fdf75;
+  --ion-color-success-rgb: 47,223,117;
+  --ion-color-success-contrast: #000000;
+  --ion-color-success-contrast-rgb: 0,0,0;
+  --ion-color-success-shade: #29c467;
+  --ion-color-success-tint: #44e283;
+
+  --ion-color-warning: #ffd534;
+  --ion-color-warning-rgb: 255,213,52;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #e0bb2e;
+  --ion-color-warning-tint: #ffd948;
+
+  --ion-color-danger: #ff4961;
+  --ion-color-danger-rgb: 255,73,97;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255,255,255;
+  --ion-color-danger-shade: #e04055;
+  --ion-color-danger-tint: #ff5b71;
+
+  --ion-color-dark: #f4f5f8;
+  --ion-color-dark-rgb: 244,245,248;
+  --ion-color-dark-contrast: #000000;
+  --ion-color-dark-contrast-rgb: 0,0,0;
+  --ion-color-dark-shade: #d7d8da;
+  --ion-color-dark-tint: #f5f6f9;
+
+  --ion-color-medium: #ffffff;
+  --ion-color-medium-rgb: 152,154,162;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0,0,0;
+  --ion-color-medium-shade: #86888f;
+  --ion-color-medium-tint: #a2a4ab;
+
+  --ion-color-light: #ffffff;
+  --ion-color-light-rgb: 34,36,40;
+  --ion-color-light-contrast: #ffffff;
+  --ion-color-light-contrast-rgb: 255,255,255;
+  --ion-color-light-shade: #ffffff;
+  --ion-color-light-tint: #ffffff;
+
+      /** title **/
+      --ion-color-title: var(--ion-color-secondary);
+      --ion-color-title-rgb: 105, 187, 123;
+      --ion-color-title-contrast: #ffffff;
+      --ion-color-title-contrast-rgb: 255, 255, 255;
+      --ion-color-title-shade: #fbfffc;
+      --ion-color-title-tint: #fdfdfd;
+}
+
+/*
+ * iOS Dark Theme
+ * -------------------------------------------
+ */
+
+.ios body.dark {
+  --ion-background-color: #000000;
+  --ion-background-color-rgb: 0,0,0;
+
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255,255,255;
+
+  --ion-color-step-50: #0d0d0d;
+  --ion-color-step-100: #1a1a1a;
+  --ion-color-step-150: #262626;
+  --ion-color-step-200: #333333;
+  --ion-color-step-250: #404040;
+  --ion-color-step-300: #4d4d4d;
+  --ion-color-step-350: #595959;
+  --ion-color-step-400: #666666;
+  --ion-color-step-450: #737373;
+  --ion-color-step-500: #808080;
+  --ion-color-step-550: #8c8c8c;
+  --ion-color-step-600: #999999;
+  --ion-color-step-650: #a6a6a6;
+  --ion-color-step-700: #b3b3b3;
+  --ion-color-step-750: #bfbfbf;
+  --ion-color-step-800: #cccccc;
+  --ion-color-step-850: #d9d9d9;
+  --ion-color-step-900: #e6e6e6;
+  --ion-color-step-950: #f2f2f2;
+
+  --ion-toolbar-background: #0d0d0d;
+
+  --ion-item-background: #1c1c1c;
+  --ion-item-background-activated: #313131;
+}
+
+
+/*
+ * Material Design Dark Theme
+ * -------------------------------------------
+ */
+
+.md body.dark {
+  --ion-background-color: #121212;
+  --ion-background-color-rgb: 18,18,18;
+
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255,255,255;
+
+  --ion-border-color: #222222;
+
+  --ion-color-step-50: #1e1e1e;
+  --ion-color-step-100: #2a2a2a;
+  --ion-color-step-150: #363636;
+  --ion-color-step-200: #414141;
+  --ion-color-step-250: #4d4d4d;
+  --ion-color-step-300: #595959;
+  --ion-color-step-350: #656565;
+  --ion-color-step-400: #717171;
+  --ion-color-step-450: #7d7d7d;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #949494;
+  --ion-color-step-600: #a0a0a0;
+  --ion-color-step-650: #acacac;
+  --ion-color-step-700: #b8b8b8;
+  --ion-color-step-750: #c4c4c4;
+  --ion-color-step-800: #d0d0d0;
+  --ion-color-step-850: #dbdbdb;
+  --ion-color-step-900: #e7e7e7;
+  --ion-color-step-950: #f3f3f3;
+
+  --ion-item-background: #1A1B1E;
+}
+
+
+
+body.lollypop {
+  --ion-color-primary: #ab26b5;
+  --ion-color-primary-rgb: 171,38,181;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #96219f;
+  --ion-color-primary-tint: #b33cbc;
+
+  --ion-color-secondary: #c872cf;
+  --ion-color-secondary-rgb: 200,114,207;
+  --ion-color-secondary-contrast: #000000;
+  --ion-color-secondary-contrast-rgb: 0,0,0;
+  --ion-color-secondary-shade: #b064b6;
+  --ion-color-secondary-tint: #ce80d4;
+
+  --ion-color-tertiary: #dda8e1;
+  --ion-color-tertiary-rgb: 221,168,225;
+  --ion-color-tertiary-contrast: #000000;
+  --ion-color-tertiary-contrast-rgb: 0,0,0;
+  --ion-color-tertiary-shade: #c294c6;
+  --ion-color-tertiary-tint: #e0b1e4;
+
+  --ion-color-success: #ffb6c1;
+  --ion-color-success-rgb: 255,182,193;
+  --ion-color-success-contrast: #000000;
+  --ion-color-success-contrast-rgb: 0,0,0;
+  --ion-color-success-shade: #e0a0aa;
+  --ion-color-success-tint: #ffbdc7;
+
+  --ion-color-warning: #A5358F;
+  --ion-color-warning-rgb: 165,53,143;
+  --ion-color-warning-contrast: #ffffff;
+  --ion-color-warning-contrast-rgb: 255,255,255;
+  --ion-color-warning-shade: #912f7e;
+  --ion-color-warning-tint: #ae499a;
+
+  --ion-color-danger: #D2042D;
+  --ion-color-danger-rgb: 210,4,45;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255,255,255;
+  --ion-color-danger-shade: #b90428;
+  --ion-color-danger-tint: #d71d42;
+
+  --ion-color-dark: #222428;
+  --ion-color-dark-rgb: 34,36,40;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255,255,255;
+  --ion-color-dark-shade: #1e2023;
+  --ion-color-dark-tint: #383a3e;
+
+  --ion-color-medium: #92949c;
+  --ion-color-medium-rgb: 146,148,156;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0,0,0;
+  --ion-color-medium-shade: #808289;
+  --ion-color-medium-tint: #9d9fa6;
+
+  --ion-color-light: #f4f5f8;
+  --ion-color-light-rgb: 244,245,248;
+  --ion-color-light-contrast: #000000;
+  --ion-color-light-contrast-rgb: 0,0,0;
+  --ion-color-light-shade: #d7d8da;
+  --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-title: var(--ion-color-primary);
+  --ion-color-title-rgb: 105, 187, 123;
+  --ion-color-title-contrast: #ffffff;
+  --ion-color-title-contrast-rgb: 255, 255, 255;
+  --ion-color-title-shade: #fbfffc;
+  --ion-color-title-tint: #fdfdfd;
+
+}
+
+body.brown-boy {
+--ion-color-primary: #6F1D1B;
+--ion-color-primary-rgb: 111,29,27;
+--ion-color-primary-contrast: #ffffff;
+--ion-color-primary-contrast-rgb: 255,255,255;
+--ion-color-primary-shade: #621a18;
+--ion-color-primary-tint: #7d3432;
+
+--ion-color-secondary: #BB9457;
+--ion-color-secondary-rgb: 187,148,87;
+--ion-color-secondary-contrast: #000000;
+--ion-color-secondary-contrast-rgb: 0,0,0;
+--ion-color-secondary-shade: #a5824d;
+--ion-color-secondary-tint: #c29f68;
+
+--ion-color-tertiary: #FFE6A7;
+--ion-color-tertiary-rgb: 255,230,167;
+--ion-color-tertiary-contrast: #000000;
+--ion-color-tertiary-contrast-rgb: 0,0,0;
+--ion-color-tertiary-shade: #e0ca93;
+--ion-color-tertiary-tint: #ffe9b0;
+
+--ion-color-success: #CCDFB6;
+--ion-color-success-rgb: 204,223,182;
+--ion-color-success-contrast: #000000;
+--ion-color-success-contrast-rgb: 0,0,0;
+--ion-color-success-shade: #b4c4a0;
+--ion-color-success-tint: #d1e2bd;
+
+--ion-color-warning: #EF9C3B;
+--ion-color-warning-rgb: 239,156,59;
+--ion-color-warning-contrast: #000000;
+--ion-color-warning-contrast-rgb: 0,0,0;
+--ion-color-warning-shade: #d28934;
+--ion-color-warning-tint: #f1a64f;
+
+--ion-color-danger: #5C0F33;
+--ion-color-danger-rgb: 92,15,51;
+--ion-color-danger-contrast: #ffffff;
+--ion-color-danger-contrast-rgb: 255,255,255;
+--ion-color-danger-shade: #510d2d;
+--ion-color-danger-tint: #6c2747;
+
+--ion-color-dark: #222428;
+--ion-color-dark-rgb: 34,36,40;
+--ion-color-dark-contrast: #ffffff;
+--ion-color-dark-contrast-rgb: 255,255,255;
+--ion-color-dark-shade: #1e2023;
+--ion-color-dark-tint: #383a3e;
+
+--ion-color-medium: #92949c;
+--ion-color-medium-rgb: 146,148,156;
+--ion-color-medium-contrast: #000000;
+--ion-color-medium-contrast-rgb: 0,0,0;
+--ion-color-medium-shade: #808289;
+--ion-color-medium-tint: #9d9fa6;
+
+--ion-color-light: #f4f5f8;
+--ion-color-light-rgb: 244,245,248;
+--ion-color-light-contrast: #000000;
+--ion-color-light-contrast-rgb: 0,0,0;
+--ion-color-light-shade: #d7d8da;
+--ion-color-light-tint: #f5f6f9;
+
+--ion-color-title: var(--ion-color-primary);
+--ion-color-title-rgb: 105, 187, 123;
+--ion-color-title-contrast: #ffffff;
+--ion-color-title-contrast-rgb: 255, 255, 255;
+--ion-color-title-shade: #fbfffc;
+--ion-color-title-tint: #fdfdfd;
+}
+
+
+body.bootstrap {
+  --ion-color-primary: #0275d8;
+  --ion-color-primary-rgb: 2,117,216;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #0267be;
+  --ion-color-primary-tint: #1b83dc;
+
+  --ion-color-secondary: #6C757D;
+  --ion-color-secondary-rgb: 108,117,125;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #5f676e;
+  --ion-color-secondary-tint: #7b838a;
+
+  --ion-color-tertiary: #6C757D;
+  --ion-color-tertiary-rgb: 108,117,125;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255,255,255;
+  --ion-color-tertiary-shade: #5f676e;
+  --ion-color-tertiary-tint: #7b838a;
+
+  --ion-color-success: #5cb85c;
+  --ion-color-success-rgb: 92,184,92;
+  --ion-color-success-contrast: #000000;
+  --ion-color-success-contrast-rgb: 0,0,0;
+  --ion-color-success-shade: #51a251;
+  --ion-color-success-tint: #6cbf6c;
+
+  --ion-color-warning: #f0ad4e;
+  --ion-color-warning-rgb: 240,173,78;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #d39845;
+  --ion-color-warning-tint: #f2b560;
+
+  --ion-color-danger: #d9534f;
+  --ion-color-danger-rgb: 217,83,79;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255,255,255;
+  --ion-color-danger-shade: #bf4946;
+  --ion-color-danger-tint: #dd6461;
+
+  --ion-color-dark: #222428;
+  --ion-color-dark-rgb: 34,36,40;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255,255,255;
+  --ion-color-dark-shade: #1e2023;
+  --ion-color-dark-tint: #383a3e;
+
+  --ion-color-medium: #92949c;
+  --ion-color-medium-rgb: 146,148,156;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0,0,0;
+  --ion-color-medium-shade: #808289;
+  --ion-color-medium-tint: #9d9fa6;
+
+  --ion-color-light: #f4f5f8;
+  --ion-color-light-rgb: 244,245,248;
+  --ion-color-light-contrast: #000000;
+  --ion-color-light-contrast-rgb: 0,0,0;
+  --ion-color-light-shade: #d7d8da;
+  --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-title: var(--ion-color-primary);
+  --ion-color-title-rgb: 105, 187, 123;
+  --ion-color-title-contrast: #ffffff;
+  --ion-color-title-contrast-rgb: 255, 255, 255;
+  --ion-color-title-shade: #fbfffc;
+  --ion-color-title-tint: #fdfdfd;
+
+}
+ion-title.title-large {
+  --color: white;
+}
+
+.ion-color-title {
+  --ion-color-base: var(--ion-color-title);
+  --ion-color-base-rgb: var(--ion-color-title-rgb);
+  --ion-color-contrast: var(--ion-color-title-contrast);
+  --ion-color-contrast-rgb: var(--ion-color-title-contrast-rgb);
+  --ion-color-shade: var(--ion-color-title-shade);
+  --ion-color-tint: var(--ion-color-title-tint);
 }
