--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -29,10 +29,10 @@
               <ion-card-content>
                 <ion-row>
                   <ion-col size="7" (click)="onMissionClick(mission.id)">
-                    {{mission.totalAmount ? mission.totalAmount : 0}}/{{mission.endAmount}} {{mission.name}}
+                    {{mission.countersAmountTotal}}/{{mission.endAmount}} {{mission.name}}
                   </ion-col>
                   <ion-col size="4">
-                    {{mission.endAmount + '%'}}
+                    {{mission.percentage + '%'}}
                   </ion-col>
                   <ion-col size="1" (click)="onFlip(i)">
                     <ion-icon name="settings-outline"></ion-icon>
