--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="title">
     <ion-title>Missions</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="onOptions()">
+      <ion-button id="popover-button">
         <ion-icon icon="ellipsis-vertical" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -79,3 +79,26 @@
     </ng-template>
   </swiper>
 </ion-content>
+
+
+<ion-popover trigger="popover-button" [dismissOnSelect]="true">
+  <ng-template>
+    <ion-content>
+      <ion-list>
+        <ion-item [button]="true" [detail]="false">Add new Mission</ion-item>
+        <ion-item [button]="true" id="nested-trigger">More Options...</ion-item>
+        <ion-popover trigger="nested-trigger" [dismissOnSelect]="true" side="end">
+          <ng-template>
+            <ion-content>
+              <ion-list>
+                <ion-item [button]="true" [detail]="false">Filter</ion-item>
+                <ion-item [button]="true" [detail]="false">Order</ion-item>
+              </ion-list>
+            </ion-content>
+          </ng-template>
+        </ion-popover>
+        <ion-item [button]="true" [detail]="false">Settings</ion-item>
+      </ion-list>
+    </ion-content>
+  </ng-template>
+</ion-popover>
