--- a/src/app/components/flipper/flipper.component.html
+++ b/src/app/components/flipper/flipper.component.html
@@ -1,8 +1,12 @@
-<div class="cardo" [@cardFlip]="data.state">
-  <div class="face front">
-    <ng-content select="[front]"></ng-content>
-  </div>
-  <div class="face back">
-    <ng-content select="[back]"></ng-content>
+<div class="flippy-container ">
+  <div class="flippy-cardContainer-wrapper horizontal">
+    <div class="flippy-cardContainer" [class.isActive]="data">
+      <div class="flippy-card flippy-front" style="transition-duration: 0.6s;">
+        <ng-content select="[front]"></ng-content>
+      </div>
+      <div class="flippy-card flippy-back" style="transition-duration: 0.6s;">
+        <ng-content select="[back]"></ng-content>
+      </div>
+    </div>
   </div>
 </div>
