--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -1,10 +1,8 @@
 <ion-header>
   <ion-toolbar color="title">
     <ion-title>{{mission.name}}</ion-title>
-    <ion-buttons slot="end">
-      <ion-button id="popover-button">
-        <ion-icon icon="ellipsis-vertical" slot="icon-only"></ion-icon>
-      </ion-button>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="missions"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -39,7 +37,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-card >
+        <ion-card>
           <ion-card-content>
             <h1>{{countersCalculated.total}}</h1>
           </ion-card-content>
