--- a/src/app/pages/missions/update-mission/update-mission.page.html
+++ b/src/app/pages/missions/update-mission/update-mission.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="title">
     <ion-title>Update Mission</ion-title>
-    <ion-buttons slot="end">
+    <ion-buttons slot="start">
       <ion-back-button defaultHref="missions"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
