--- a/src/app/pages/missions/missions.page.scss
+++ b/src/app/pages/missions/missions.page.scss
@@ -1,3 +1,11 @@
 .custom-swiper {
   height: 100%;
 }
+
+
+.icon {
+  display: inline-block;
+  font-size: 30px;
+  color: var(--ion-color-success,#3dbd23 );
+  vertical-align: middle;
+ }
