--- a/src/app/pages/missions/create-mission/create-mission.page.html
+++ b/src/app/pages/missions/create-mission/create-mission.page.html
@@ -10,5 +10,32 @@
 </ion-header>
 
 <ion-content>
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <ion-list lines="full" class="ion-no-margin ion-no-padding">
+      <ion-item>
+        <ion-label position="stacked">
+          Mission Name <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-input required type="text" formControlName="name"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">
+          Amount To Reach <ion-text color="danger">*</ion-text>
+        </ion-label>
+        <ion-input required type="number" formControlName="endAmount"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">
+          Description
+        </ion-label>
+        <ion-input required type="text" formControlName="description"></ion-input>
+      </ion-item>
+    </ion-list>
+    <div className="ion-padding">
+      <ion-button expand="block" type="submit">
+        Create mission
+      </ion-button>
+    </div>
+  </form>
 
 </ion-content>
