--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -41,7 +41,7 @@
             <div back>
               <ion-row>
                 <ion-col size="3">
-                  <div [routerLink]="['create']">
+                  <div [routerLink]="['update', mission.id]">
                     <ion-icon name="create-outline"></ion-icon>
                     Edit
                   </div>
