--- a/src/app/pages/counters/counters.page.html
+++ b/src/app/pages/counters/counters.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header *ngIf="isLoaded">
   <ion-toolbar color="title">
     <ion-title>{{mission.name}}</ion-title>
     <ion-buttons slot="start">
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="isLoaded">
   <ion-grid class="ion-margin ion-text-center">
     <ion-row>
       <ion-col *ngFor="let x of [1,2,3,4,5]">
