--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -85,7 +85,7 @@
         <ion-item [button]="true" [detail]="false" [routerLink]="['create']">Add new Mission</ion-item>
         <ion-item [button]="true" [detail]="false" [routerLink]="['create']">Filter</ion-item>
         <ion-item [button]="true" [detail]="false" [routerLink]="['create']">Order</ion-item>
-        <ion-item [button]="true" [detail]="false" [routerLink]="['settings']">Settings</ion-item>
+        <ion-item [button]="true" [detail]="false" [routerLink]="['/settings']">Settings</ion-item>
       </ion-list>
     </ion-content>
   </ng-template>
