--- a/src/app/pages/missions/missions.page.html
+++ b/src/app/pages/missions/missions.page.html
@@ -22,7 +22,7 @@
   <ion-searchbar (ionChange)="onSearchChange($event)" placeholder="Search"></ion-searchbar>
   <swiper class="custom-swiper" (slideChange)="onSlideChange()" (swiper)="setSwiperInstance($event)">
     <ng-template swiperSlide>
-      <ng-container *ngFor="let mission of missions$ | async; let i = index; ">
+      <ng-container *ngFor="let mission of missions; let i = index;">
         <ion-card-content>
           <app-flipper [customFrontCss]="mission.countersAmountTotal >= mission.endAmount ? 'card-completed' : ''">
             <div front>
@@ -62,7 +62,7 @@
       </ng-container>
     </ng-template>
     <ng-template swiperSlide>
-      <ng-container *ngFor="let mission of missions$ | async">
+      <ng-container *ngFor="let mission of missions">
         <div [routerLink]="['/counters', mission.id]">
           <p class="ion-margin">
             {{mission.name}} {{mission.countersAmountTotal}}/{{mission.endAmount}}
@@ -71,7 +71,6 @@
             </ng-container>
           </p>
         </div>
-
       </ng-container>
     </ng-template>
   </swiper>
